--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,6 +1,7 @@
 /backend/node_modules
 /dashboard/node_modules
 /frontend/node_modules
+/backend/.env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
