--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGO_URL=mongodb+srv://omZerodha:omZerodha@zerodhaclonecluster.x6bzp.mongodb.ne
 # custom collection name is zerodha else test will be used by mongodb
 TOKEN_KEY=omZerodha
 PORT=3002
+
+# username=omZerodha   and password=omZerodha  on mongodb cluster of it
