--- a/.gitIgnore
+++ b/.gitIgnore
@@ -2,6 +2,7 @@
 /dashboard/node_modules
 /frontend/node_modules
 /backend/.env
+**/.env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
